Repair layout problem created with r7558

--- a/opendj3/src/main/resources/css/coredoc.css
+++ b/opendj3/src/main/resources/css/coredoc.css
@@ -169,6 +169,10 @@ pre.programlisting,pre.screen,pre.flat
     background-color: #fafafa;
     border: thin dashed #ccc;
     padding: 6px;
+}
+
+pre.screen,pre.flat
+{
     text-indent: -18px;
 }
 
